2005-05-27  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsBSDDB.py (upgrade_7): Add upgrade path for repo changes.
	* src/const.py.in: Define integer constants for standard events.
	* gramps.glade: Resolve merge conflicts.

2005-05-27  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditRepository.py: polish Repository Ref UI
	* src/RelLib.py: merge minor changes from HEAD
	* src/RepositoryRefEdit.py: polish Repository Ref UI
	* src/gramps.glade: polish Repository Ref UI

2005-05-27  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditRepository.py: completed delete Repository
	* src/RepositoryView.py: completed delete Repository
	* src/Utils.py: added then removed a method, line number changed.

2005-05-27  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditSource.py: completed support Repository Ref UI
	* src/RepositoryRefEdit.py: everything now works accept MediaType
	* src/gramps.glade: tooltips etc. for Repository Ref UI

2005-05-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/RelLib.py: Add wrappers for old event handle API including a
	DeprecationWarning (this makes HEAD no longer completely defunct);
	Add checks for EventRef class type
	* src/EditPerson.py: typo
	* src/plugins/TestcaseGenerator.py:  Support for event references.

2005-05-26  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib.py (EventRef): Add class.

	* src/EditPerson.py: Support for event references.
	* src/FamilyView.py: Support for event references.
	* src/ListBox.py: Support for event references.
	* src/PedView.py: Support for event references.
	* src/RelLib.py: Support for event references.

2005-05-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/TestcaseGenerator.py: Add place, media and source
	references.
	* src/PedView.py (rebuild_trees): Resize matching is now done later by
	idle callback; (add_table_to_notebook): Work with PyGtk < 2.4;
	(format_relation): Adapt format to availably space.
