@@ -2,6 +2,7 @@
 	* src/GrampsBSDDB.py (upgrade_7): Add upgrade path for repo changes.
 	* src/const.py.in: Define integer constants for standard events.
 	* gramps.glade: Resolve merge conflicts.
+	* src/GrampsBSDDB.py (upgrade_*): Use transaction for commits.
 
 2005-05-27  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
 	* src/EditRepository.py: polish Repository Ref UI
